--- a/package.json
+++ b/package.json
@@ -8,8 +8,12 @@
     "start": "next start"
   },
   "dependencies": {
+    "@apollo/client": "^3.0.0-rc.10",
+    "@babel/core": "^7.10.4",
+    "graphql": "^15.2.0",
     "next": "9.4.4",
     "react": "16.13.1",
     "react-dom": "16.13.1"
-  }
+  },
+  "devDependencies": {}
 }
